trying to resolve github securtiy warning by removing package lock and updating node depenancies.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.7",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@reactivex/rxjs": "^5.5.0",
@@ -50,6 +50,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "webpack": "^3.11.0"
   }
 }
